Add missing packages to Docker master image
py-requests is needed for buildmasters that use OAuth components.
py-certifi is needed for certificate verification by urllib3.

--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -38,6 +38,8 @@ RUN \
         gosu@testing \
         dumb-init@edge\
         py-jinja2 \
+        py-requests \
+        py-certifi \
         tar \
         tzdata \
         curl && \
